--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -155,87 +155,54 @@ Classes used by multiple components are in the `seedu.addressbook.commons` packa
 
 This section describes some noteworthy details on how certain features are implemented.
 
-// tag::undoredo[]
-=== [Proposed] Undo/Redo feature
+// tag::report[]
+=== [Proposed] Report feature
 ==== Proposed Implementation
 
-The undo/redo mechanism is facilitated by `VersionedAddressBook`.
-It extends `AddressBook` with an undo/redo history, stored internally as an `addressBookStateList` and `currentStatePointer`.
-Additionally, it implements the following operations:
+The Report feature is implemented through a `ReportCommand` that extends from the abstract `Command` class.
+It interacts with the object that implements the `Model` interface by updating it with the statistics which are wrapped in a `Statistics` object.
+The following operations are added to the `Model` interface to facilitate the interaction:
 
-* `VersionedAddressBook#commit()` -- Saves the current address book state in its history.
-* `VersionedAddressBook#undo()` -- Restores the previous address book state from its history.
-* `VersionedAddressBook#redo()` -- Restores a previously undone address book state from its history.
+* `Model#updateStatistics()` -- updates the statistics of the objecting implementing the `Model` interface.
+* `Model#getStatistics()` -- gets the statistics of the current object.
 
-These operations are exposed in the `Model` interface as `Model#commitAddressBook()`, `Model#undoAddressBook()` and `Model#redoAddressBook()` respectively.
+Given below is an example usage scenario and how the Report feature behaves at each step.
 
-Given below is an example usage scenario and how the undo/redo mechanism behaves at each step.
-
-Step 1. The user launches the application for the first time. The `VersionedAddressBook` will be initialized with the initial address book state, and the `currentStatePointer` pointing to that single address book state.
-
-image::UndoRedoState0.png[]
-
-Step 2. The user executes `delete 5` command to delete the 5th person in the address book. The `delete` command calls `Model#commitAddressBook()`, causing the modified state of the address book after the `delete 5` command executes to be saved in the `addressBookStateList`, and the `currentStatePointer` is shifted to the newly inserted address book state.
-
-image::UndoRedoState1.png[]
-
-Step 3. The user executes `add n/David ...` to add a new person. The `add` command also calls `Model#commitAddressBook()`, causing another modified address book state to be saved into the `addressBookStateList`.
-
-image::UndoRedoState2.png[]
+Step 1. The user starts up CaloFit for the first time. The `ModelManager` will contain a `MealLog` that has an empty list, and a `Statistics` field set to `null`.
 
 [NOTE]
-If a command fails its execution, it will not call `Model#commitAddressBook()`, so the address book state will not be saved into the `addressBookStateList`.
+If the user enters "report" in the Command Line Input with a `MealLog` that has no `Meal` entered this month, a `CommandException` will be thrown since there are no `Meal`s to gather statistics pertaining to this month.
 
-Step 4. The user now decides that adding the person was a mistake, and decides to undo that action by executing the `undo` command. The `undo` command will call `Model#undoAddressBook()`, which will shift the `currentStatePointer` once to the left, pointing it to the previous address book state, and restores the address book to that state.
-
-image::UndoRedoState3.png[]
+Step 2. The user has added 2 `Meal`s into the `MealLog` through the `add` feature.
 
 [NOTE]
-If the `currentStatePointer` is at index 0, pointing to the initial address book state, then there are no previous address book states to restore. The `undo` command uses `Model#canUndoAddressBook()` to check if this is the case. If so, it will return an error to the user rather than attempting to perform the undo.
+The `Statistics` field in `ModelManager` does not change when any command other than `report` is entered.
 
-The following sequence diagram shows how the undo operation works:
+Step 3. The user executes `report` command to generate the report of CaloFit. The `ReportCommand` created will call `Model#updateStatistics()`, causing a `Statistics` object to be created through `Statistics#generateStatistics()` and a `CommandResult` object to be returned.
 
-image::UndoSequenceDiagram.png[]
-
-NOTE: The lifeline for `UndoCommand` should end at the destroy marker (X) but due to a limitation of PlantUML, the lifeline reaches the end of diagram.
-
-The `redo` command does the opposite -- it calls `Model#redoAddressBook()`, which shifts the `currentStatePointer` once to the right, pointing to the previously undone state, and restores the address book to that state.
-
-[NOTE]
-If the `currentStatePointer` is at index `addressBookStateList.size() - 1`, pointing to the latest address book state, then there are no undone address book states to restore. The `redo` command uses `Model#canRedoAddressBook()` to check if this is the case. If so, it will return an error to the user rather than attempting to perform the redo.
-
-Step 5. The user then decides to execute the command `list`. Commands that do not modify the address book, such as `list`, will usually not call `Model#commitAddressBook()`, `Model#undoAddressBook()` or `Model#redoAddressBook()`. Thus, the `addressBookStateList` remains unchanged.
-
-image::UndoRedoState4.png[]
-
-Step 6. The user executes `clear`, which calls `Model#commitAddressBook()`. Since the `currentStatePointer` is not pointing at the end of the `addressBookStateList`, all address book states after the `currentStatePointer` will be purged. We designed it this way because it no longer makes sense to redo the `add n/David ...` command. This is the behavior that most modern desktop applications follow.
-
-image::UndoRedoState5.png[]
-
-The following activity diagram summarizes what happens when a user executes a new command:
-
-image::CommitActivityDiagram.png[]
+The following sequence diagram shows how the "report" command works.
 
 ==== Design Considerations
 
-===== Aspect: How undo & redo executes
+===== Aspect: When the `Statistics` object is saved.
 
-* **Alternative 1 (current choice):** Saves the entire address book.
-** Pros: Easy to implement.
-** Cons: May have performance issues in terms of memory usage.
-* **Alternative 2:** Individual command knows how to undo/redo by itself.
-** Pros: Will use less memory (e.g. for `delete`, just save the person being deleted).
-** Cons: We must ensure that the implementation of each individual command are correct.
+* **Alternative 1 (current choice):** Only when a `report` command is entered.
+** Pros: Less processes carried out for each type of command.
+** Cons: At any point in using CaloFit, the statistics are likely not updated to the most recent command.
+* **Alternative 2:** Every command saves a new updated `Statistics` object.
+** Pros: Logging of statistics can be accurate, and statistics are always updated.
+** Cons: Unnecessary as user does not need to see the statistics other than through a `report` command and results in every command having to do more work and interact with the `Model` more, possibly creating more bugs.
+* **Exaplanation of Choice:** Since the user only needs to see the updated statistics when a `report` command is executed, we only need to generate a new `Statistics` object with the updated values for that command, hence **Alternative 1** is chosen to avoid adding unnecessary complexity to each command.
+===== Aspect: Data structure to store the statistics in CaloFit.
 
-===== Aspect: Data structure to support the undo/redo commands
-
-* **Alternative 1 (current choice):** Use a list to store the history of address book states.
-** Pros: Easy for new Computer Science student undergraduates to understand, who are likely to be the new incoming developers of our project.
-** Cons: Logic is duplicated twice. For example, when a new command is executed, we must remember to update both `HistoryManager` and `VersionedAddressBook`.
-* **Alternative 2:** Use `HistoryManager` for undo/redo
-** Pros: We do not need to maintain a separate list, and just reuse what is already in the codebase.
-** Cons: Requires dealing with commands that have already been undone: We must remember to skip these commands. Violates Single Responsibility Principle and Separation of Concerns as `HistoryManager` now needs to do two different things.
-// end::undoredo[]
+* **Alternative 1 (current choice):** Wrap the values in a `Statistics` object.
+** Pros: Neater code and easier to understand, since all statistic-related values are stored in the `Statistics` object and are not implemented in the `Model`.
+** Cons: Additional class to maintain and test for dependencies.
+* **Alternative 2:** Store the values as a list in the `Model`.
+** Pros: The statistics can be updated easily through the `Model` itself by updating the elements in the list. Accessing the statistics to display is easier as well.
+** Cons: Burdens the `Model` with a responsibility that is largely irrelevant to its current ones, which is to keep track of the Objects that make up the CaloFit model.
+* **Explanation of Choice:** To try and enforce Single Responsibility Principle as much as possible and avoid adding irrelavant functionality to `Model`.
+// end::report[]
 
 // tag::dataencryption[]
 === [Proposed] Data Encryption
