--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -139,11 +139,11 @@ Example:
 * `remove y2s2`
 
 ==== Viewing description of a module: `description`
-Shows a short textual description of a particular module. +
+Shows the description of a particular module, including its prerequisites. +
 Format: `description MODULE_CODE` +
 Example:
 
-* `description cs2103`
+* `description CS2103T`
 
 ==== Editing the title of current study plan: `title`
 Changes the title of the current active study plan. +
@@ -380,21 +380,9 @@ Examples:
 * `getmodcode algorithms`
 * `getmodcode programming`
 
-==== Viewing prerequisites of a module : `prereq`
-Shows all prerequisite modules for the specified module. +
-Format: `prereq MODULE_CODE`
-
-Example:
-
-* `prereq cs2040`
-
 ==== Viewing total completed MCs : `mcs`
 Shows the current total MCs for all *completed* modules. +
 Format: `mcs`
-
-==== Viewing focus area : `viewfocusarea`
-Shows the focus area that the user has previously declared. +
-Format: `viewfocusarea`
 
 ==== Viewing modules that can be taken in a given semester : `validmods`
 Shows all the modules that can be taken in a given semester based on whether prerequisites have been met. +
@@ -417,12 +405,8 @@ Format: `check [AREA]`
 Examples:
 
 * `check` -- checks all graduation requirements by default +
-* `check core` +
-* `check focus` +
-* `check prereq` +
-* `check mc` +
-* `check MODULE` -- checks if the module is valid, listing issues with its prerequisites +
-* `check SEMESTER` -- checks if all modules in the semester are valid
+* `check core` -- checks only core modules +
+* `check focus` -- checks only the declared focus area
 
 ==== Displays
 Highlights a module in red if it doesn't satisfy any of its prerequisites, displaying these required modules as tags.
