--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -170,17 +170,39 @@ Examples:
 
 `top3 wc/100kg`
 
+
 === Participation
-This feature handles the entire flow of each session during Meet Day. It allows event organisers to submit Athlete’s Squat, Bench, Deadlift attempts, as well as the success of their lifts. It will show the relevant information to prepare for the athletes lift (displaying name, weight, etc).
+This feature handles the entire flow of each session during Meet Day. It allows event organisers to submit an Athlete’s Squat, Bench, Deadlift attempts, as well as the success of their lifts. It will show the relevant information to prepare for the athletes lift (displaying name, weight, etc). 
+The flow of events, and the commands to facilitate the competition session will be presented in order below:
 
 ==== Prepare for a new session: `new`
-Starts a new session of SBD lifts for the given ID of the competition, separated by a space. This will load all the athletes who are participating in this competition. *im giving a dummy competition id as i dont know the format for the real one yet.
+Creates a new session of SBD lifts for the given ID of the competition, separated by a space. This will load all the athletes who are participating in this competition. *im giving a dummy competition id as i dont know the format for the real one yet.
 
 Format: `new COMPETITION_ID`
 
 Examples:
 
 * `new 0123`
+
+==== Submit attempts: `attempts`
+Submits all 9 attempts for the 3 lifts, seperating the lifts by a single space, and the attempts for each lift with a slash.
+
+Format: `attempts n/NAME SQUAT_1/SQUAT_2/SQUAT_3 BENCH_1/BENCH_2/BENCH_3 DEADLIFT_1/DEADLIFT_2/DEADLIFT_3`
+
+Examples:
+
+* `attempts n/farhannafahrid 115/120/125 40/47.5/55 155/165/170`
+
+* `attempts n/marcustay 190/200/205 135/140/145 210/220/230`
+
+==== Starts the session
+The session can be started after all participating athletes have submitted their 9 attempts for their 3 lifts. This command will sort the athletes and the weight they are attempting in increasing order, after being sorted in this order: Squat Attempts 1,2,3 , Bench Attempts 1,2,3 , Deadlift Attempts 1,2,3.
+
+Format: `start`
+
+Example:
+
+* `start`
 
 ////
 ==== Update lift or no lift: `lift`
@@ -202,15 +224,4 @@ Format: `next`
 
 Examples:
 
-* next
-
-==== Submit attempts: `attempts`
-Submits all 9 attempts for the 3 lifts, seperating the lifts by a single space, and the attempts for each lift with a slash.
-
-Format: `attempts n/NAME SQUAT_1/SQUAT_2/SQUAT_3 BENCH_1/BENCH_2/BENCH_3 DEADLIFT_1/DEADLIFT_2/DEADLIFT_3`
-
-Examples:
-
-* `attempts n/farhannafahrid 115/120/125 40/47.5/55 155/165/170`
-
-* `attempts n/marcustay 190/200/205 135/140/145 210/220/230`
+* `next`
