--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -170,14 +170,14 @@ Given below is an example usage scenario and how the Report feature behaves at e
 Step 1. The user starts up CaloFit for the first time. The `ModelManager` will contain a `MealLog` that has an empty list, and a `Statistics` field set to `null`.
 
 [NOTE]
-If the user enters "report" in the Command Line Input with a `MealLog` that has no `Meal` entered this month, a `CommandException` will be thrown since there are no `Meal`s to gather statistics pertaining to this month.
+If the user enters "report" in the Command Line Input with a `MealLog` that has no `Meal` entered this month, a `CommandException` will be thrown since there are no `Meal` to gather statistics pertaining to this month.
 
-Step 2. The user has added 2 `Meal`s into the `MealLog` through the `add` feature.
+Step 2. The user has added a `Meal` into the `MealLog` through the `add` feature.
 
 [NOTE]
 The `Statistics` field in `ModelManager` does not change when any command other than `report` is entered.
 
-Step 3. The user executes `report` command to generate the report of CaloFit. The `ReportCommand` created will call `Model#updateStatistics()`, causing a `Statistics` object to be created through `Statistics#generateStatistics()` and a `CommandResult` object to be returned.
+Step 3. The user enters "report" in the Command Line Input to generate the report of CaloFit. The `ReportCommand` created will call `Model#updateStatistics()`, causing a `Statistics` object to be created through `Statistics#generateStatistics()` and a `CommandResult` object to be returned.
 
 The following sequence diagram shows how the "report" command works.
 
@@ -185,13 +185,14 @@ The following sequence diagram shows how the "report" command works.
 
 ===== Aspect: When the `Statistics` object is saved.
 
-* **Alternative 1 (current choice):** Only when a `report` command is entered.
+* **Alternative 1 (current choice):** Only when a "report" command is entered.
 ** Pros: Less processes carried out for each type of command.
 ** Cons: At any point in using CaloFit, the statistics are likely not updated to the most recent command.
 * **Alternative 2:** Every command saves a new updated `Statistics` object.
 ** Pros: Logging of statistics can be accurate, and statistics are always updated.
-** Cons: Unnecessary as user does not need to see the statistics other than through a `report` command and results in every command having to do more work and interact with the `Model` more, possibly creating more bugs.
-* **Exaplanation of Choice:** Since the user only needs to see the updated statistics when a `report` command is executed, we only need to generate a new `Statistics` object with the updated values for that command, hence **Alternative 1** is chosen to avoid adding unnecessary complexity to each command.
+** Cons: Unnecessary as user does not need to see the statistics other than through a "report" command and results in every command having to do more work and interact with the `Model` more, possibly creating more bugs.
+* **Exaplanation of Choice:** Since the user only needs to see the updated statistics when a "report" command is executed, we only need to generate a new `Statistics` object with the updated values for that command, hence **Alternative 1** is chosen to avoid adding unnecessary complexity to each command.
+
 ===== Aspect: Data structure to store the statistics in CaloFit.
 
 * **Alternative 1 (current choice):** Wrap the values in a `Statistics` object.
